# cmu_16833_project

project_16833/: README.md
project_16833/Trajactory/: evo_fast_plvins_loop.txt  tum_fast_plvins_loop.txt
project_16833/camera_model/: CMakeLists.txt
project_16833/camera_model/src/camera_models/: CameraFactory.cc
project_16833/camera_model/src/chessboard/: Chessboard.cc
project_16833/config/: vins_rviz_config_asdw.rviz
project_16833/config/euroc/: euroc_config.yaml  euroc_config_asdwtest.yaml  euroc_config_fix_extrinsic.yaml  euroc_config_no_extrinsic.yaml  loop.yaml
project_16833/feature_tracker/: CMakeLists.txt
project_16833/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  linefeature_tracker.cpp  linefeature_tracker.h  linefeature_tracker_node.cpp  parameters.h
project_16833/feature_tracker/src/line_descriptor/: CMakeLists.txt
project_16833/image_node_b/: CMakeLists.txt
project_16833/image_node_b/src/: image_node_b.cpp  parameters.cpp  parameters.h
project_16833/pose_graph/: CMakeLists.txt
project_16833/pose_graph/src/: keyframe.cpp  pose_graph.cpp  pose_graph_node.cpp
project_16833/vins_estimator/: CMakeLists.txt
project_16833/vins_estimator/launch/: edgelet.launch  plvins.launch  plvins_show_linepoint.launch
project_16833/vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp
project_16833/vins_estimator/src/factor/: imu_factor.h  line_parameterization.cpp  line_projection_factor.cpp  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  projection_factor.cpp
(+4 files in other folders)
